@@ -41,7 +41,7 @@ public:
 protected:
   virtual void discretionary_processing ();
   void copy_breakable_items ();
-  virtual SCM do_derived_mark () const;
+  virtual void derived_mark () const;
 };
 
 #endif
